# openfollow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  Taskfile.yml  WRITTEN_OFFER.md  config.example.toml  messages.mo  messages.pot  pyproject.toml
.claude/skills/add-config-field/: SKILL.md
.claude/skills/deploy-pi/: SKILL.md
.claude/skills/pre-push-ci/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release-deb.yml
config/: openfollow.service
docs/: COVERAGE.md  HEADER_CONVENTIONS.md  PACKAGING.md  PROJECT_STRUCTURE.md  SERVICE.md  TEMPLATES.md
locale/zh_CN/: README.md
locale/zh_CN/LC_MESSAGES/: openfollow.mo  openfollow.po  openfollow.po.bak2
openfollow/: __init__.py  app.py  configuration.py  logging_setup.py  main.py  model_seed.py  net_utils.py  operator_messages.py  palette.py  runtime_metrics.py  services.py  system_stats.py  units.py  window.py
openfollow/i18n/: __init__.py
openfollow/input/: __init__.py  _joystick_protocol.py  button_detection.py  conflicts.py  events.py  fader_dispatch.py  faders.py  gamepad.py  input_manager.py  keyboard.py  midi.py  mouse.py  mouse3d.py  shaping.py
openfollow/marker_catalog/: __init__.py  catalog.py  station_name.py  sync.py
openfollow/network/: __init__.py  adapter.py  detect.py  dhcpcd_adapter.py  nm_adapter.py  psutil_adapter.py  validate.py
openfollow/osc/: __init__.py  input.py  operator_message.py  parser.py  service.py  template.py  transmitter.py  transport.py
openfollow/otp/: __init__.py  server.py
openfollow/privilege/: __init__.py  broker.py  capabilities.py  device_repair.py  drop_in.py  systemd_unit.py
openfollow/psn/: __init__.py  marker.py  receiver.py  server.py
openfollow/rttrpm/: __init__.py  server.py
openfollow/runtime/: __init__.py  app_commands.py  app_modes.py  app_modes_network.py  app_orchestration.py  deb_update.py  online_sync.py  overlay_draw_hud.py  overlay_draw_messages.py  overlay_draw_scene.py  overlay_draw_style.py  overlay_draw_zones.py  overlay_layout.py  overlay_state.py  overlay_status_badge.py  receiver_bus.py  receiver_pipeline.py  receiver_state.py  release-pubkey.pem  services_detection_pin.py  services_frame.py  services_marker_visuals.py  time_sync.py  webkit_browser.py
openfollow/scene/: __init__.py  camera.py  solver.py
openfollow/templates/: __init__.py  bootstrap.py  loader.py  schema.py  writer.py
openfollow/templates/system/: __init__.py  osc_output.adm-osc-3d.oftemplate  osc_output.adm-osc.openfollowtemplate  osc_output.dnb-absolute.oftemplate  osc_output.etc-eos.openfollowtemplate
openfollow/video/: __init__.py  connection_status.py  detection.py  gst_compat.py  media_store.py  overlay.py  preview.py  receiver.py  tracking.py
openfollow/video/inputs/: __init__.py  _base.py  avf.py  ndi.py  picam.py  rtp.py  rtsp.py  srt.py  testpattern.py  v4l2.py
openfollow/web/: __init__.py  _bottle_charset_fix.py  _md.py  diagnostics.py  discovery.py  labels.py  login_throttle.py  midi_capture.py  peer_auth.py  routes.py  server.py  validation.py
openfollow/web/help/: camera.md  config-transfer.md  detection.md  detection_mask_editor.md  diagnostics.md  gamepad.md  general-network-interface.md  general-software-update.md  general-station.md  grid.md  keyboard.md  marker-control-visibility.md  marker-visuals.md  midi.md  mouse.md  mouse3d.md  movement.md  operator_messages.md  osc.md  osc_bindings.md  osc_destinations.md  otp_output.md  overview.md  psn.md  rttrpm_output.md  statistics.md  trigger_zones.md  video_source.md  zone_editor.md
openfollow/web/help/zh_CN/: camera.md  config-transfer.md  detection.md  diagnostics.md  gamepad.md  general-network-interface.md  grid.md  (+20 more)
openfollow/web/templates/: about.tpl  base.tpl  index.tpl  login.tpl  wizard.tpl
openfollow/zones/: __init__.py  engine.py  geometry.py
packaging/: build-deb.sh
packaging/debian/: apply-update.sh  control.in  copyright  kanshi.config  nm-wait-online-timeout.conf  openfollow-splash.service  openfollow.service  postinst  postrm  prerm  render-splash.sh  session.sh  splash.sh
packaging/image/: check_sbom_compliance.py  openfollow-root-ref.sh  pre-image.sh
packaging/image/config/: openfollow-cm5.yaml  openfollow-common.yaml  openfollow-pi5.yaml
packaging/image/layer/: openfollow.yaml
packaging/macos/: build-dmg.sh  config.seed.toml  launcher.py  make-icns.sh  openfollow.spec  runtime_hook.py
packaging/udev/: 99-openfollow-3dmouse.rules
scripts/: baseline_runtime_stats.py  ci-remote.sh  controller_diagnostics.py  export_onnx.py  gen_stage_svg.py  install-detection.sh  install-ndi.sh  install-system-deps.sh  run-on-display.sh  validate_i18n.py
scripts/ansible/: install-raspberry-pi.yml
scripts/ansible/templates/: openfollow-splash.service.j2  openfollow-splash.sh.j2  openfollow.service.j2
scripts/hw_validation/: README.md  analyze_results.py  marker_catalog_two_station.py  operator_message_receiver.py  operator_message_sender.py  osc_socket_options_probe.py  psn_packet_size_probe.py  raw_udp_probe.py
tests/: _fake_broker.py  _fake_cairo.py  _fake_gst.py  _fake_gtk.py  _fake_midi.py  conftest.py  test_ansible_poetry_install.py  test_ansible_sudoers_dropin.py  test_app_commands.py  test_app_commands_dispatch.py  test_app_lifecycle.py  test_app_marker_catalog_helpers.py  test_app_modes.py  test_app_modes_dispatch.py  test_app_modes_network.py  test_app_orchestration.py  test_cage_session_launcher.py  test_camera.py  test_configuration.py  test_configuration_mutation.py  test_configuration_properties.py  test_connection_status.py  test_coordinate_system_invariants.py  test_deb_update.py  test_detection.py  test_detection_edge_cases.py  test_detection_mask_filter.py  test_detection_remaining.py  test_e2e_smoke.py  test_first_boot_config_seed.py  test_gst_compat.py  test_i18n.py  test_i18n_coverage.py  test_image_layer.py  test_image_root_ref.py  test_input_button_detection.py  test_input_conflicts.py  test_input_events.py  test_input_fader_dispatch.py  test_input_faders.py  (+146 more)
(+61 files in other folders)
